Fixed bug #30922 (reflective functions crash PHP when interfaces extend themselves)