Zend/zend_compile.c
@@ -1997,6 +1997,9 @@ static inline void do_implement_interface(zend_class_entry *ce, zend_class_entry
 	if (!(ce->ce_flags & ZEND_ACC_INTERFACE) && iface->interface_gets_implemented && iface->interface_gets_implemented(iface, ce TSRMLS_CC) == FAILURE) {
 		zend_error(E_CORE_ERROR, "Class %s could not implement interface %s", ce->name, iface->name);
 	}
+	if (ce == iface) {
+		zend_error(E_ERROR, "Interface %s cannot not implement itself", ce->name);
+	}
 }
 
 
